# republic

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  FINAL_SUMMARY.md  Justfile  MIGRATION_GUIDE.md  Makefile  README.md  REFACTORING_DESIGN.md  REFACTORING_SUMMARY.md  context.py  examples.py  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  simple_test.py  sitemap.xml  test_complete_architecture.py  test_context.py  test_simple_layer.py  validation.py
.github/: settings.yml
.github/workflows/: main.yml  on-release-main.yml
about/license/: index.html
about/philosophy/: index.html
batch/: index.html
chat/: index.html
concepts/context/: index.html
concepts/tape/: index.html
docs/: batch.md  chat.md  design.md  errors.md  getting-started.md  index.md  modules.md  observability.md  philosophy.md  quickstart.md  responses.md  storage.md  tools.md
docs/about/: license.md  philosophy.md
docs/concepts/: context.md  tape.md
docs/guides/: batch.md  breaking-changes.md  chat.md  embeddings.md  responses.md  streaming.md  tape.md  text.md  tools.md
docs/operations/: errors.md  observability.md
docs/reference/: api.md
errors/: index.html
examples/: 01_agent_like_python.py  01_quickstart_chat.py  02_guardrails_stream_events.py  02_tools_auto_and_manual.py  03_tape_anchor_handoff.py  03_tape_handoff_and_query.py  04_stream_events.py  05_text_and_embeddings.py
getting-started/: index.html
guides/batch/: index.html
guides/breaking-changes/: index.html
guides/chat/: index.html
guides/embeddings/: index.html
guides/responses/: index.html
guides/stream-events/: index.html
guides/tape/: index.html
guides/text/: index.html
guides/tools/: index.html
modules/: index.html
observability/: index.html
operations/errors/: index.html
operations/observability/: index.html
philosophy/: index.html
quickstart/: index.html
reference/api/: index.html
responses/: index.html
scripts/: verify_docs.py
search/: search_index.json
src/republic/: __about__.py  __init__.py  llm.py  prompt.py
src/republic/clients/: __init__.py  _internal.py  batch.py  chat.py  embedding.py  responses.py  text.py
src/republic/clients/parsing/: completion.py
src/republic/core/: __init__.py  conversations.py  errors.py  execution.py  results.py  telemetry.py
src/republic/tape/: __init__.py  context.py  entries.py  handoff.py  manager.py  query.py  session.py  store.py
src/republic/tools/: __init__.py  context.py  executor.py  schema.py
storage/: index.html
tests/: __init__.py  conftest.py  fakes.py  test_batch.py  test_chat.py  test_conversations.py  test_docs.py  test_docs_and_examples.py  test_foo.py  test_llm.py  test_llmcore.py  test_main.py  test_monorepo.py  test_openrouter_embeddings.py  test_openrouter_smoke.py  test_responses.py  test_responses_handling.py  test_tape.py  test_tape_contract.py  test_text.py  test_text_client.py  test_tools.py  test_tools_contract.py  test_user_experience.py  test_workspace.py
tests/clients/: test_batch.py  test_chat.py  test_text.py
tests/llm/: test_llm.py
tests/observability/: test_telemetry.py
tests/tape/: test_context.py  test_query.py  test_session.py  test_store.py
tests/tools/: test_tools.py
tools/: index.html
