[project]
name = "republic"
version = "0.0.0"
description = "The minimalistic AI stack for developers who value freedom and efficiency."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]

[dependency-groups]
dev = [
    "ruff >= 0.8.1",
    "pytest >= 8.3.4",
]

[tool.uv.sources]

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"