[project]
name = "republic"
version = "0.1.0"
description = "The minimalistic AI stack for developers who value freedom and efficiency."
readme = "README.md"
authors = [
    { name = "Chojan Shang", email = "psiace@apache.org" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
prompt = [
    "republic-prompt",
]
all = [
    "republic[prompt]",
]

[dependency-groups]
dev = [
    "republic[all]",
]
lint = [
    "ruff >= 0.8.1",
]
test = [
    "pytest >= 8.3.4",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-terminal>=4.7.0",
]
doc = [
    "mkdocs-simple-hooks>=0.1.5",
]

[tool.uv.sources]
republic-prompt = { workspace = true }

[tool.uv]
default-groups = ["dev", "lint", "test", "docs"]

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
